--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,22 @@
 {
-    "name": "techbizz/unit-converter",
-    "description": "unit converter application",
-    "autoload": {
-        "psr-4": {
-            "Techbizz\\UnitConverterModule\\": "src/techbizz/unit-converter-module/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Susant Paudel",
-            "email": "techbizznepal@gmail.com"
-        }
-    ],
-    "require": {
-        "php": "^8.1",
-        "ext-http": "*"
+  "name": "techbizz/unit-converter",
+  "description": "unit converter application",
+  "license": [
+    "MIT"
+  ],
+  "autoload": {
+    "psr-4": {
+      "Techbizz\\UnitConverterModule\\": "src/techbizz/unit-converter-module/"
     }
+  },
+  "authors": [
+    {
+      "name": "Susant Paudel",
+      "email": "techbizznepal@gmail.com"
+    }
+  ],
+  "require": {
+    "php": "^8.1",
+    "ext-http": "*"
+  }
 }
