--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
   ],
   "autoload": {
     "psr-4": {
-      "Techbizz\\": "src",
       "Techbizz\\UnitConverterModule\\": "src/techbizz/unit-converter-module/"
     }
   },
@@ -18,6 +17,6 @@
   ],
   "require": {
     "php": "^8.1",
-    "ext-http": "*"
+    "symfony/dotenv": "^6.1"
   }
 }
