--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,13 @@
   ],
   "require": {
     "php": "^8.1"
+  },
+  "require-dev": {
+    "phpstan/phpstan": "^1.9",
+    "squizlabs/php_codesniffer": "^3.7"
+  },
+  "scripts": {
+    "phpstan": "./vendor/bin/phpstan analyse --level 5 ./src",
+    "sniff": "./vendor/bin/phpcbf --standard=./ruleset.xml ./src"
   }
 }
